overflow hidden solve

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -30,6 +30,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   width: 100vw;
+  overflow-x :hidden;
 }
 
 h1 {
